--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -29,3 +29,26 @@ footer {
   left: 0;
   width: 100vw;
 }
+
+@media (max-width: 768px) {
+  .home-content {
+    max-width: 90%;
+    text-align: center;
+    padding-bottom: 1em;
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+}
